structmeta-tests/tests/compile_fail/struct_meta/option_not_parse.stderr
error[E0277]: the trait bound `NotParse: Parse` is not satisfied
   --> tests/compile_fail/struct_meta/option_not_parse.rs:3:5
    |
3   |     not_parse: Option<NotParse>,
    |     ^^^^^^^^^ the trait `Parse` is not implemented for `NotParse`
    |
note: required by a bound in `ParseBuffer::<'a>::parse`
   --> $CARGO/syn-1.0.91/src/parse.rs
    |
    |     pub fn parse<T: Parse>(&self) -> Result<T> {
    |                     ^^^^^ required by this bound in `ParseBuffer::<'a>::parse`
